[package]
name = "raft-example"
version = "0.1.0"
edition = "2021"
authors = ["ibaryshnikov"]

[dependencies]
axum = "0.7"
openraft = { version = "0.8.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }

[dependencies.tokio]
version = "1.32.0"
features = ["macros", "rt-multi-thread", "sync"]
