[package]
name = "raft-example"
version = "0.1.0"
edition = "2021"
authors = ["ibaryshnikov"]

[dependencies]
axum = "0.7.2"
openraft = { version = "0.8.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dependencies.tokio]
version = "1.35.0"
features = ["macros", "rt-multi-thread", "sync"]
