[package]
name = "raft-example"
version = "0.1.0"
edition = "2021"
authors = ["ibaryshnikov"]

[dependencies]
async-trait = "0.1.74"
axum = "0.7.2"
clap = { version = "4.4.11", features = ["derive"] }
http = "1.0"
openraft = { version = "0.8.8", features = ["serde"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dependencies.tokio]
version = "1.35.0"
features = ["macros", "rt-multi-thread", "sync"]
